--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,74 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: white;
+}
+
+header {
+  background-color: cornflowerblue;
+}
+
+header img {
+  border-radius: 100%;
+  height: 7rem;
+  width: auto;
+  display: block;
+  margin: auto;
+  padding: 2%;
+}
+
+header h1 {
+  font-size: xx-large;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  line-height: 3rem;
+  text-align: center;
+  text-transform: uppercase;
+  padding-bottom: 2%;
+  color: black;
+}
+
+input {
+  display: block;
+  margin: auto;
+  margin-top: 4%;
+  height: 2rem;
+  width: 20rem;
+  font-size: large;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 3rem;
+  text-align: center;
+  padding: 1%;
+  border: solid 2px cornflowerblue;
+}
+
+button {
+  display: block;
+  margin: auto;
+  margin-top: 3%;
+  width: 12rem;
+  color: black;
+  background-color: cornflowerblue;
+  border: solid 2px cornflowerblue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  line-height: 3rem;
+}
+
+.result {
+  background-color: cornflowerblue;
+  color: black;
+  display: block;
+  margin: auto;
+  margin-top: 3%;
+  width: 20rem;
+  height: 3rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  line-height: 3rem;
+  text-align: center;
+  border: solid 2px black;
 }
